// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/checkbox/CheckboxField should render isChecked=false with value=null 1`] = `
<Checkbox
  isChecked={false}
  label="Enter things"
  name="checkbox"
  onBlur="onblur"
  onChange="onchange"
  value={null}
/>
`;

exports[`components/checkbox/CheckboxField should render isChecked=false with value=undefined 1`] = `
<Checkbox
  isChecked={false}
  label="Enter things"
  name="checkbox"
  onBlur="onblur"
  onChange="onchange"
/>
`;

exports[`components/checkbox/CheckboxField should render isChecked=true with value=value 1`] = `
<Checkbox
  isChecked={true}
  label="Enter things"
  name="checkbox"
  onBlur="onblur"
  onChange="onchange"
  value="value"
/>
`;
